--- a/photography/index.html
+++ b/photography/index.html
@@ -34,7 +34,7 @@
     <section id="content" class="container">
       <div class="left_content">
         <img
-          src="assets/img/IMG_20240215_185721EdwardBliffin.jpg"
+          src="assets/img/IMG_20240215_185721 - Edward Bliffin.jpg"
           alt="Photographer portrait"
         />
       </div>
