--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1 id="main-heading">Destin Hill</h1>
     <nav class="primary">
-        <a href="eddybesnappin/index.html">Photography Microsite</a>
+        <a href="photography/index.html">Photography Microsite</a>
     </nav>
     </div>
   </body>
