--- a/photography/about.html
+++ b/photography/about.html
@@ -26,7 +26,7 @@
     </header>
     <h2>About Me</h2>
 <div class="bio">
-<img src="assets/img/IMG_20240215_185721 - Edward Bliffin.jpg" alt="photographer" width="700" height="500">
+<img src="assets/img/IMG_20240215_185721EdwardBliffin.jpg" alt="photographer" width="700" height="500">
 <div class="bio-info">
   <h3>Hello.</h3>
   <h4>My name is Eddy.</h4>
@@ -96,3 +96,4 @@
         </header>
   </body>
 </html>
+
